Create object pool on repository sync
When a project with a pool repository is synced, we want the object pool
to be created, and the project to be linked to the object pool.

--- a/ee/app/workers/all_queues.yml
+++ b/ee/app/workers/all_queues.yml
@@ -41,6 +41,7 @@
 - geo:geo_scheduler_scheduler
 - geo:geo_scheduler_primary_scheduler
 - geo:geo_scheduler_secondary_scheduler
+- geo:geo_create_object_pool
 
 - pipeline_default:store_security_reports
 - pipeline_default:ci_create_cross_project_pipeline
