Update GPRC and protobuf gems for CE->EE upgrade tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -305,6 +305,9 @@ stages:
   script:
     - ruby -r./scripts/ee_specific_check/ee_specific_check -e'EESpecificCheck.fetch_remote_ce_branch'
     - git checkout -f FETCH_HEAD
+    - echo "gem 'grpc', '~> 1.18.0'" >> Gemfile
+    - echo "gem 'google-protobuf', '~> 3.7.0.rc.2'" >> Gemfile
+    - bundle update google-protobuf grpc
     - . scripts/utils.sh
     - . scripts/prepare_build.sh
     - date
