--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -283,6 +283,7 @@ stages:
     - git fetch https://gitlab.com/gitlab-org/gitlab-ee.git v9.3.0-ee
     - git checkout -f FETCH_HEAD
     - sed -i "s/gem 'oj', '~> 2.17.4'//" Gemfile
+    - sed -i "/gem 'grpc'/d" Gemfile
     - echo "gem 'grpc', '~> 1.18.0'" >> Gemfile
     - echo "gem 'google-protobuf', '~> 3.7.0.rc.2'" >> Gemfile
     - bundle update google-protobuf grpc
