--- a/ee/changelogs/unreleased/1979-fe-multiple-approval-rules.yml
+++ b/ee/changelogs/unreleased/1979-fe-multiple-approval-rules.yml
@@ -1,5 +1,5 @@
 ---
-title: Multiple blocking merge request approval rules (behind feature flag)
+title: Multiple blocking merge request approval rules
 merge_request: 9001
 author:
 type: added
